--- a/2024/day3/day3.cabal
+++ b/2024/day3/day3.cabal
@@ -67,7 +67,7 @@ executable day3
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.20.0.0
+    build-depends:    base ^>=4.20.0.0, regex-applicative
 
     -- Directories containing source files.
     hs-source-dirs:   src
