--- a/2024/day6/day6.cabal
+++ b/2024/day6/day6.cabal
@@ -67,7 +67,7 @@ executable day6
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.20.0.0
+    build-depends:    base ^>=4.20.0.0, containers, mtl, parallel
 
     -- Directories containing source files.
     hs-source-dirs:   src
