--- a/2024/day7/day7.cabal
+++ b/2024/day7/day7.cabal
@@ -67,7 +67,7 @@ executable day7
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.20.0.0
+    build-depends:    base ^>=4.20.0.0, megaparsec
 
     -- Directories containing source files.
     hs-source-dirs:   src
