--- a/2025/day3/day3.cabal
+++ b/2025/day3/day3.cabal
@@ -38,4 +38,6 @@ executable day3
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , containers
+    , transformers
   default-language: GHC2024
